--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -94,7 +94,8 @@
                     android:layout_alignParentStart="true"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     android:layout_marginLeft="4dp"
-                    android:layout_marginStart="4dp"/>
+                    android:layout_marginStart="4dp"
+                    android:textIsSelectable="true"/>
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
